--- a/backend/package.json
+++ b/backend/package.json
@@ -5,10 +5,11 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "init": "cp .env.prototype .env && npm run initdb",
-    "initdb": "rm -rf data ; mkdir data",
+    "init": "cp .env.prototype .env && npm run init-data",
+    "init-data": "rm -rf data && mkdir data && echo \"In the future some initial data will be loaded on the database\"",
     "build": "tsc",
-    "start": "concurrently \"mongod --dbpath data\" \"sleep 3 && node build/main\""
+    "start-mongodb": "mongod --dbpath data",
+    "start": "node build/main"
   },
   "repository": {
     "type": "git",
@@ -37,7 +38,6 @@
     "@types/node": "^12.0.0",
     "@types/passport": "^1.0.0",
     "@types/socket.io": "^2.1.2",
-    "concurrently": "^4.1.0",
     "typescript": "^3.4.5"
   }
 }
