--- a/backend/package.json
+++ b/backend/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "init": "cp .env.prototype .env && npm run init-data",
-    "win-init": "copy .env.prototype .env && npm run init-data",
+    "win-init": "copy .env.prototype .env ; npm run win-init-data",
     "init-data": "rm -rf data && mkdir data",
-    "win-init-data": "rmdir /S /Q data && mkdir data",
+    "win-init-data": "if(Test-Path -Path ./data) {rm -r ./data} ; mkdir ./data",
     "build": "tsc",
     "start-mongodb": "mongod --dbpath data",
     "populate": "node build/populate",
