--- a/angular-app/TAWRESTaurant/package.json
+++ b/angular-app/TAWRESTaurant/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^4.3.1",
     "font-awesome": "^4.7.0",
     "rxjs": "~6.4.0",
+    "socket.io-client": "^2.2.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
